<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:background="@drawable/home_screen_border"
                android:text="@string/login_text" />

            <TextView
                android:id="@+id/News"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:background="@drawable/home_screen_border"
                android:text="@string/news_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:background="@drawable/home_screen_border"
                android:text="@string/register_text" />

            <TextView
                android:id="@+id/Ticker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:background="@drawable/home_screen_border"
                android:text="@string/ticker_text"
                />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/navigationComponent"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="37dp"
        android:src="@drawable/navigation_component"
        android:visibility="visible"
        android:contentDescription="@string/drop_component"/>

</FrameLayout>